--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 					<releaseBranchPrefix>release/</releaseBranchPrefix>
 					<hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
 					<versionTagPrefix />
+					<noDeploy>true</noDeploy>
 				</configuration>
 			</plugin>
 		</plugins>
